[package]
name = "boids"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
rand = "0.9.2"
rayon = "1.11.0"
rand_distr = "0.5.1"
log = "0.4"

[build]
rustflags = [
  "-C", "target-cpu=native",
  "-C", "opt-level=3",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true